# berka-weather-crime-baseball

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sqlmesh/: config.yaml
sqlmesh/.cache/model_definition/: 0_214_27_9_94__models__raw__raw_detroit_weather__1757018049_2525601__1441015521__wcb__postgres  0_214_27_9_94__models__raw__raw_historical_baseball_ballparks__1757011750_7111804__3809112327__wcb__postgres  0_214_27_9_94__models__raw__raw_historical_baseball_ballparks__1757011812_9369063__117174148__wcb__postgres  0_214_27_9_94__models__raw__raw_historical_baseball_ballparks__1757012252_1021097__3809112327__wcb__postgres  0_214_27_9_94__models__raw__raw_historical_baseball_ballparks__1757012352_8480246__3809112327__wcb__postgres  0_214_27_9_94__models__raw__raw_historical_baseball_ballparks__1757012462_2426078__1441015521__wcb__postgres  0_214_27_9_94__models__raw__raw_historical_baseball_teams__1757017747_1004055__1441015521__wcb__postgres  (+7 more)
sqlmesh/audits/: assert_parses_as_numeric_non_negative.sql  assert_unique_values.sql
sqlmesh/holding/: raw_detroit_ncei.py  raw_historical_baseball_teams.sql
sqlmesh/tests/: test_gold_philadelphia_weather.yml
sqlmesh/utils/: metar_bronze_model.py  minio_utils.py  ncei_bronze_model.py
src/: logger.py  raw_detroit_weather.sql
src/data_ingestion/: api_ingest.py  data_consolidation.py  data_ingest.py
src/data_vis/: data_vis.py
src/flows/: ingestion_flow.py  main_wcb_flow.py  migration_flow.py
src/utils/: minio_project_client.py
tests/: test_main.py
(+46 files in other folders)
