[project]
name = "weather-crime-baseball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "minio>=7.2.16",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "sqlmesh[postgres]>=0.214.0",
]
