[project]
name = "weather-crime-baseball"
version = "0.1.0"
description = "Data pipeline aggregating 21st century weather, crime, and baseball statistics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "minio>=7.2.16",
    "polars>=1.33.0",
    "prefect>=3.4.18",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlmesh[postgres]>=0.214.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.1",
]
